--- a/frontend/src/app/components/user/salary-info/salary-info.component.html
+++ b/frontend/src/app/components/user/salary-info/salary-info.component.html
@@ -6,13 +6,13 @@
     <div class="row">
       <div class="form-group col-md-6">
         <label>Pay-grade</label>
-       <select class="form-control">
+       <select class="form-control" [(ngModel)]="payGradeModel.fkSalaryGrade">
          <option>Select Pay-grade</option>
        </select>
       </div>
       <div class="form-group col-md-6">
         <label>No. Of Increment </label>
-        <input type="number" class="form-control">
+        <input type="number" class="form-control" [(ngModel)]="payGradeModel.noOfIncrement">
       </div>
 
       <div class="form-group col-md-6">
