--- a/frontend/src/app/components/user/salary-info/salary-info.component.html
+++ b/frontend/src/app/components/user/salary-info/salary-info.component.html
@@ -8,6 +8,9 @@
         <label>Pay-grade</label>
        <select class="form-control" [(ngModel)]="payGradeModel.fkSalaryGrade">
          <option>Select Pay-grade</option>
+         <option *ngFor="let data of payGrades" [value]="data.id">
+           {{data.gradeTitle}}
+         </option>
        </select>
       </div>
       <div class="form-group col-md-6">
@@ -16,7 +19,7 @@
       </div>
 
       <div class="form-group col-md-6">
-        <button class="btn btn-sm btn-success">Update</button>
+        <button class="btn btn-sm btn-success" (click)="assignPayGrade()">Update</button>
       </div>
 
     </div>
