--- a/frontend/src/app/components/payroll/pay-grade/pay-grade.component.html
+++ b/frontend/src/app/components/payroll/pay-grade/pay-grade.component.html
@@ -1,3 +1,67 @@
+<!-- Edit Pay-Grade Modal -->
+<div class="modal" id="editGradeModal">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Edit Pay-grade</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <!-- Modal body -->
+      <div class="modal-body">
+
+        <div class="row">
+          <div class="form-group col-md-6">
+            <label>Title</label>
+            <input class="form-control" placeholder="pay-grade"  [(ngModel)]="editPayGradeModel.gradeTitle">
+          </div>
+          <div class="form-group col-md-6">
+            <label>BASIC</label>
+            <input type="number" class="form-control" placeholder="basic" name="BASIC" [(ngModel)]="editPayGradeModel.BASIC">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label>eb1Rate</label>
+            <input type="number" class="form-control" placeholder="%" name="eb1Rate" [(ngModel)]="editPayGradeModel.eb1Rate">
+          </div>
+          <div class="form-group col-md-6">
+            <label>eb1MaxTime</label>
+            <input type="number" class="form-control" placeholder="year" name="eb1MaxTime" [(ngModel)]="editPayGradeModel.eb1MaxTime">
+          </div>
+          <div class="form-group col-md-6">
+            <label>eb2Rate</label>
+            <input type="number" class="form-control" placeholder="%" name="eb2Rate" [(ngModel)]="editPayGradeModel.eb2Rate">
+          </div>
+          <div class="form-group col-md-6">
+            <label>eb2MaxTime</label>
+            <input type="number" class="form-control" placeholder="year" name="eb2MaxTime" [(ngModel)]="editPayGradeModel.eb2MaxTime">
+          </div>
+          <div class="form-group col-md-6">
+            <label>DESCRIPTION</label>
+            <input class="form-control" placeholder="description" name="DESCRIPTION" [(ngModel)]="editPayGradeModel.DESCRIPTION">
+          </div>
+          <div class="form-group col-md-12">
+            <button class="btn btn-success btn-sm pull-right" (click)="updatePaygrade()">Insert</button>
+          </div>
+
+        </div>
+
+
+
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
 <div class="container">
   <div class="card">
     <div class="card-body">
@@ -6,12 +70,6 @@
           <div class="form-group col-md-6">
             <label>Title</label>
             <input class="form-control" placeholder="pay-grade"  [(ngModel)]="payGradeModel.gradeTitle">
-            <!--<select class="form-control" placeholder="pay-head" name="gradeTitle" [ngModel]="payGradeModel.gradeTitle">-->
-              <!--<option value="">Select Payhead</option>-->
-              <!--<option *ngFor="let data of payHeads" [value]="data.id">-->
-                <!--{{data.allowDeducTitle}}-->
-              <!--</option>-->
-            <!--</select>-->
           </div>
           <div class="form-group col-md-6">
             <label>BASIC</label>
@@ -65,7 +123,7 @@
             <td>{{data.eb2MaxTime}}</td>
             <td>{{data.DESCRIPTION}}</td>
             <td>
-              <button class="btn btn-sm btn-info">Edit</button>
+              <button class="btn btn-sm btn-info" (click)="editPayGrade(data)">Edit</button>
             </td>
 
           </tr>
@@ -74,6 +132,70 @@
       </table>
 
 <!--=================================Details========================================-->
+
+
+      <!-- Edit Pay-Grade-Details Modal -->
+      <div class="modal" id="editDetailModal">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+              <h4 class="modal-title">Edit Pay-grade</h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <!-- Modal body -->
+            <div class="modal-body">
+              <div class="row">
+
+                <div class="form-group col-md-6">
+                  <label>Pay Grade</label>
+                  <select class="form-control" name="fkGradeParentId" [(ngModel)]="editPayDetailsModel.fkGradeParentId">
+                    <option value="">Select Pay-grade</option>
+                    <option *ngFor="let data of payGrades" [value]="data.id">
+                      {{data.gradeTitle}}
+                    </option>
+                  </select>
+                </div>
+
+
+                <div class="form-group col-md-6">
+                  <label>Head</label>
+                  <select class="form-control" name="fkPayHeadId" [(ngModel)]="editPayDetailsModel.fkPayHeadId">
+                    <option value="">Select Payhead</option>
+                    <option *ngFor="let data of payHeads" [value]="data.id">
+                      {{data.allowDeducTitle}}
+                    </option>
+                  </select>
+                </div>
+
+
+                <div class="form-group col-md-6">
+                  <label>Percent Of Basic</label>
+                  <input type="number" class="form-control" placeholder="%" name="percentOfBasic" [(ngModel)]="editPayDetailsModel.percentOfBasic">
+                </div>
+
+                <div class="form-group col-md-12">
+                  <button class="btn btn-success btn-sm pull-right" (click)="updatePaygradeDetails()">Insert</button>
+                </div>
+              </div>
+
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
       <hr>
       <h4 align="center">Pay-grade Details</h4>
       <div class="row">
@@ -123,7 +245,7 @@
           <td>{{data.allowDeducTitle}}</td>
           <td>{{data.percentOfBasic}}</td>
           <td>
-            <button class="btn btn-sm btn-info">Edit</button>
+            <button class="btn btn-sm btn-info" (click)="editDetails(data)">Edit</button>
           </td>
 
         </tr>
