--- a/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
+++ b/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
@@ -33,6 +33,16 @@
           </ng-multiselect-dropdown>
         </div>
 
+        <div class="form-group col-md-3">
+          <label>Team</label>
+          <select class="form-control" name="shift" id="team"  (change)="selectTeam($event.target.value)">
+            <option value="">Select Team</option>
+            <option *ngFor="let tm of team" [value]="tm.teamId">
+              {{tm.teamName}}
+            </option>
+          </select>
+        </div>
+
         <div class="form-group col-md-4">
           <button class="btn btn-success btn-sm" (click)="assignShift()">Assign</button>
         </div>
