--- a/frontend/src/app/components/leave/add-leave/add-leave.component.html
+++ b/frontend/src/app/components/leave/add-leave/add-leave.component.html
@@ -20,7 +20,7 @@
 
 
         <div class="form-group col-md-3">
-          <label>No Of Days</label>
+          <label>No of Days</label>
           <input type="number" class="form-control input" [(ngModel)]="employee.noOfDays" placeholder="number of days">
         </div>
 
