--- a/frontend/src/app/components/company/add-company/add-company.component.html
+++ b/frontend/src/app/components/company/add-company/add-company.component.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="form-group col-md-6">
-          <label>WebSite</label>
+          <label>Website</label>
           <input type="text" class="form-control" name="webSite" [(ngModel)]="companyInfo.webSite" placeholder="www">
         </div>
 
