--- a/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
+++ b/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="form-group col-md-4">
-          <button class="btn btn-success btn-sm" (click)="assignShift()">Assign</button>
+          <button class="btn btn-success btn-sm" style="margin-top: 30px" (click)="assignShift()">Assign</button>
         </div>
 
       </div>
