--- a/frontend/src/app/components/team/assign-team/assign-team.component.html
+++ b/frontend/src/app/components/team/assign-team/assign-team.component.html
@@ -16,7 +16,7 @@
 
 
         <div class="form-group col-md-4">
-          <button class="btn btn-success btn-sm" (click)="assignTeam()">Assign</button>
+          <button class="btn btn-success btn-sm" style="margin-top: 30px"  (click)="assignTeam()">Assign</button>
         </div>
 
       </div>
