--- a/frontend/src/app/components/configuration/designation/add-designaton/add-designaton.component.html
+++ b/frontend/src/app/components/configuration/designation/add-designaton/add-designaton.component.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="form-group col-md-6">
-        <label>desigLevel</label>
+        <label>Designation Level</label>
         <!--<select name="desigLevel" class="form-control">-->
           <!--<option>level 1</option>-->
           <!--<option>level 2</option>-->
