--- a/frontend/src/app/components/payroll/pay-advance/pay-advance.component.html
+++ b/frontend/src/app/components/payroll/pay-advance/pay-advance.component.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="form-group col-md-12">
-                <label>DESCRIPTION</label>
+                <label>Description</label>
                 <input class="form-control" placeholder="description" [(ngModel)]="payAdvanceModel.description" type="text">
             </div>
 
