--- a/frontend/src/app/components/payroll/pay-grade/pay-grade.component.html
+++ b/frontend/src/app/components/payroll/pay-grade/pay-grade.component.html
@@ -17,7 +17,7 @@
             <input class="form-control" placeholder="pay-grade"  [(ngModel)]="editPayGradeModel.gradeTitle">
           </div>
           <div class="form-group col-md-6">
-            <label>BASIC</label>
+            <label>Basic</label>
             <input type="number" class="form-control" placeholder="basic" name="BASIC" [(ngModel)]="editPayGradeModel.BASIC">
           </div>
 
@@ -38,7 +38,7 @@
             <input type="number" class="form-control" placeholder="year" name="eb2MaxTime" [(ngModel)]="editPayGradeModel.eb2MaxTime">
           </div>
           <div class="form-group col-md-6">
-            <label>DESCRIPTION</label>
+            <label>Description</label>
             <input class="form-control" placeholder="description" name="DESCRIPTION" [(ngModel)]="editPayGradeModel.DESCRIPTION">
           </div>
           <div class="form-group col-md-12">
