--- a/frontend/src/app/components/user/basic-info/basic-info.component.html
+++ b/frontend/src/app/components/user/basic-info/basic-info.component.html
@@ -96,7 +96,7 @@
             </div>
 
             <div class="form-group col-md-4">
-                <label>Date Of Birth <span style="color: red">*</span></label>
+                <label>Date of Birth <span style="color: red">*</span></label>
                 <input type="date" class="form-control" name="birthdate" [(ngModel)]="employeeBasicForm.birthdate" required>
             </div>
 
