--- a/frontend/src/app/components/user/joining-info/joining-info.component.html
+++ b/frontend/src/app/components/user/joining-info/joining-info.component.html
@@ -32,7 +32,14 @@
         <input type="text" name="supervisor" placeholder="name" [(ngModel)]="employeeJoiningForm.supervisor" class="form-control">
       </div>
 
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-3">
+        <label>Status</label>
+        <select class="form-control" [(ngModel)]="employeeJoiningForm.fkActivationStatus">
+          <option value="1">Active</option>
+          <option value="2">Inactive</option>
+        </select>
+      </div>
+      <div class="form-group col-md-3">
         <label>Probation Period</label>
         <input type="text" name="probationPeriod" placeholder="month" [(ngModel)]="employeeJoiningForm.probationPeriod" class="form-control">
       </div>
