--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -188,7 +188,7 @@
                 </ul>
               </li>
 
-              <li class="has-submenu" >
+              <li class="has-submenu" *ngxPermissionsOnly="['admin']">
                 <a href="#">Company</a>
                 <ul class="submenu">
                   <li><a routerLink="company/add">Company Info</a></li>
