--- a/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
+++ b/frontend/src/app/components/configuration/shift-assign/shift-assign.component.html
@@ -17,7 +17,7 @@
         <div class="form-group col-md-4">
           <label>Start Date</label>
           <input bsDatepicker
-                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" [(ngModel)]="startDate" class="form-control">
+                 [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" [(ngModel)]="startDate" autocomplete="off" class="form-control">
         </div>
 
         <div class="form-group col-md-4">
