--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngxPermissionsOnly="['admin']">
 
     <!-- Row 1 -->
     <div class="row">
