--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -184,6 +184,7 @@
                 <a href="#">Employee</a>
                 <ul class="submenu">
                   <li><a routerLink="employee">Employee</a></li>
+                  <li><a routerLink="employee/past">Past Employee</a></li>
                   <li><a routerLink="employee/add">Add Employee</a></li>
                 </ul>
               </li>
