--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -216,6 +216,7 @@
               <li class="">
                 <a routerLink="team/show">Show Team</a>
                 <a routerLink="team/assign">Assign Team</a>
+                <a routerLink="leave/team">Leave Team</a>
               </li>
             </ul>
           </li>
