--- a/frontend/src/app/components/configuration/show-leave/show-leave.component.html
+++ b/frontend/src/app/components/configuration/show-leave/show-leave.component.html
@@ -69,6 +69,83 @@
   </div>
 </div>
 
+<!-- The Reject Modal -->
+<div class="modal" id="rejectModal">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content ">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Reject Comment</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        <div class="row">
+          <div class="form-group col-md-6">
+            <label>Name</label>
+            <input class="form-control" readonly value="{{rejectModel.firstName+' '+rejectModel.lastName}}">
+          </div>
+          <div class="form-group col-md-6">
+            <label>Start Date</label>
+            <input bsDatepicker
+                   [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" [(ngModel)]="rejectModel.startDate" class="form-control input" placeholder="start" readonly>
+          </div>
+
+          <div class="form-group col-md-6">
+            <label>End Date</label>
+            <input bsDatepicker
+                   [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }"  name="resignDate" [(ngModel)]="rejectModel.endDate" class="form-control input" placeholder="end" readonly>
+          </div>
+
+
+          <div class="form-group col-md-6">
+            <label>No Of Days</label>
+            <input type="number" class="form-control input" [(ngModel)]="rejectModel.noOfDays" placeholder="number of days" readonly>
+          </div>
+
+          <div class="form-group col-md-6">
+            <label>Leave Category</label>
+            <select class="form-control input" name="fkLeaveCategory" [(ngModel)]="rejectModel.fkLeaveCategory" disabled>
+              <option value="" selected>Select Category</option>
+              <option *ngFor="let lc of leaveCategories" [value]="lc.id">
+                {{lc.categoryName}}
+              </option>
+            </select>
+          </div>
+
+          <div class="form-group col-md-6">
+            <label>Remark</label>
+            <textarea class="form-control input" [(ngModel)]="rejectModel.remarks" placeholder="cause" readonly></textarea>
+          </div>
+
+          <div class="form-group col-md-12">
+            <label>Reason Of Rejection</label>
+            <textarea class="form-control input" [(ngModel)]="rejectModel.rejectCause" placeholder="cause"></textarea>
+          </div>
+
+          <div class="form-group col-md-12">
+            <button class="btn btn-success btn-sm" (click)="updateReject()">Reject</button>
+          </div>
+
+
+
+
+
+        </div>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
 
 
 <div class="card">
@@ -86,6 +163,7 @@
         <th>Start</th>
         <th>End</th>
         <th>Days</th>
+        <th>Reject Cause</th>
         <th>Status</th>
         <th>Action</th>
 
