--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,3 +1,31 @@
+<!-- The Modal -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h6 class="modal-title">Absent</h6>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                Modal body..
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+
+
 <div class="container-fluid" *ngxPermissionsOnly="['admin']">
 
     <!-- Row 1 -->
@@ -40,7 +68,7 @@
                                             <td>On Leave</td>
                                             <td>{{attendanceModel.onleaveCountMorning}}</td>
                                         </tr>
-                                        <tr>
+                                        <tr (click)="showAbsent('ppdMorning')">
                                             <td>Absent</td>
                                             <td>
                                                 {{ attendanceModel.morningTotal - attendanceModel.morningPresent - attendanceModel.onleaveCountMorning}}
@@ -86,7 +114,7 @@
                                                 <td>On Leave</td>
                                                 <td>{{attendanceModel.onleaveCountEvening}}</td>
                                             </tr>
-                                            <tr>
+                                            <tr (click)="showAbsent('ppdEvening')">
                                                 <td>Absent</td>
                                                 <td>
                                                     {{ attendanceModel.eveningTotal - attendanceModel.eveningPresent - attendanceModel.onleaveCountEvening}}
@@ -152,7 +180,7 @@
                                             <td>On Leave</td>
                                             <td>{{attendanceModel.softwareOnleave}}</td>
                                         </tr>
-                                        <tr>
+                                        <tr (click)="showAbsent('software')">
                                             <td>Absent</td>
                                             <td>
                                                 {{ attendanceModel.softwareTotalEmp - attendanceModel.softwarePresent - attendanceModel.softwareOnleave}}
@@ -198,7 +226,7 @@
                                                 <td>On Leave</td>
                                                 <td>{{attendanceModel.globalOnleave}}</td>
                                             </tr>
-                                            <tr>
+                                            <tr (click)="showAbsent('global')">
                                                 <td>Absent</td>
                                                 <td>
                                                     {{ attendanceModel.globalTotalEmp - attendanceModel.globalPresent - attendanceModel.globalOnleave}}
@@ -269,7 +297,7 @@
                                             <td>On Leave</td>
                                             <td>{{attendanceModel.digitalOnleave}}</td>
                                         </tr>
-                                        <tr>
+                                        <tr (click)="showAbsent('digital')">
                                             <td>Absent</td>
                                             <td>
                                                 {{ attendanceModel.digitalTotalEmp - attendanceModel.digitalPresent - attendanceModel.digitalOnleave}}
