--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -11,7 +11,18 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-                Modal body..
+               <table class="table table-striped table-bordered">
+                   <thead>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                   </thead>
+                   <tbody>
+                        <tr *ngFor="let user of absentModel">
+                            <td>{{user.firstName}}</td>
+                            <td>{{user.lastName}}</td>
+                        </tr>
+                   </tbody>
+               </table>
             </div>
 
             <!-- Modal footer -->
