--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -232,6 +232,7 @@
                 <a routerLink="payroll/payhead">Pay Head</a>
                 <a routerLink="payroll/salary-sheet">Salary Sheet</a>
                 <a routerLink="payroll/pay-advance">Advance Payment</a>
+                <a routerLink="payroll/salary/setup">Salary Setup</a>
 
               </li>
             </ul>
