--- a/frontend/src/app/components/payroll/pay-employee-salary-setup/pay-employee-salary-setup.component.html
+++ b/frontend/src/app/components/payroll/pay-employee-salary-setup/pay-employee-salary-setup.component.html
@@ -1,47 +1,110 @@
-<div class="card">
-  <div class="card-header-pills">
-    <h3 align="center" style="font-family: 'Righteous', cursive;">Add Employee Salary</h3>
-  </div>
-  <div class="card-body">
-    <pre>{{myForm.value | json}}</pre>
-    <form #myForm="ngForm">
-      <div class="row">
+<div class="container">
+    <div class="card">
+        <div class="card-header">Employee Salary Setup</div>
+
+        <div class="card-body">
+
+            <table datatable class="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Middle Name</th>
+                    <th>Last Name</th>
+                    <th>Employee ID</th>
+                    <th>Designation</th>
+                    <th>Department</th>
+                    <th>Action</th>
+                </tr>
+                </thead>
+
+                <tbody>
+
+                </tbody>
+
+            </table>
+
+        </div>
+        <hr>
+
+        <div class="row" style="padding: 20px;">
+
+            <div class="form-group col-md-12">
+                <label>Employee</label>
+                <input class="form-control" placeholder="name" type="text" [(ngModel)]="payAdvanceModel.empName"
+                       readonly>
+            </div>
+
+            <div class="col-md-12">
+                <div class="container">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                        <th>Pay Heads</th>
+                        <th>Amount</th>
+                        <th>Gross</th>
+                        <th>Type</th>
+                        <th>Action</th>
+                        </thead>
+                        <tbody>
+                        <tr *ngFor="let data of empAllPayrolls">
+                            <td>{{data.allowDeducTitle}}</td>
+                            <td>{{data.amount}}</td>
+                            <td>{{data.grossPercent}}</td>
+                            <td>{{data.allowDeducType}}</td>
+                            <td>
+                                <button class="btn btn-sm btn-info" (click)="editSheet(data)">Edit</button>
+                            </td>
 
 
-        <div class="form-group col-md-6">
-          <label>Select Employee</label>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="form-group col-md-6">
+                <label>Pay heads</label>
+                <select class="form-control" [(ngModel)]="model.payroll">
+                    <option value="">Select Payhead</option>
+                    <option *ngFor="let data of payrolls" [value]="data.id">
+                        {{data.allowDeducTitle}}
+                    </option>
+                </select>
+            </div>
 
-          <select class="form-control" name="fkEmployeeId">
-            <option>Select Employee</option>
-            <option>Emp 1</option>
-            <option>Emp 2</option>
-            <option>Emp 3</option>
-          </select>
+            <div class="form-group col-md-6">
+                <label>Amount</label>
+                <input type="number" name="amount" placeholder="amount" [(ngModel)]="model.amount" class="form-control">
+            </div>
+
+            <div class="form-group col-md-6">
+                <label>Description</label>
+                <input type="text" name="description" placeholder="description" [(ngModel)]="model.description"
+                       class="form-control">
+            </div>
+
+            <div class="form-group col-md-6">
+                <label>Gross Percent</label>
+                <input type="number" name="grossPercent" placeholder="grossPercent" [(ngModel)]="model.grossPercent"
+                       class="form-control">
+            </div>
+
+            <div class="form-group col-md-12" *ngIf="checkUpdateFlag();else other_content">
+
+                <button class="btn btn-success pull-right" (click)="update()">Insert</button>
+            </div>
+
+            <ng-template #other_content class="form-group col-md-12">
+                <div class="form-group col-md-12">
+
+                    <button class="btn btn-success pull-right" (click)="update()">Update</button>
+                    <button class="btn btn-danger pull-right" (click)="resetSheet()">Reset</button>
+                </div>
+            </ng-template>
+
 
         </div>
 
 
-        <div class="form-group col-md-6">
-          <label>Amount</label>
-          <input type="number" placeholder="tk" name="amount" class="form-control">
-        </div>
-
-        <div class="form-group col-md-6">
-          <label>Description</label>
-          <input type="text" placeholder="description" name="description" class="form-control">
-        </div>
-
-        <div class="form-group col-md-6">
-          <label>Gross Percent</label>
-          <input type="number" placeholder="grossPercent"  name="grossPercent" class="form-control" [(ngModel)]="grossPercent" required >
-        </div>
-
-        <div class="form-group col-md-6">
-          <button class="btn btn-success" [disabled]="!myForm.valid">Submit</button>
-        </div>
+    </div>
 
 
-      </div>
-    </form>
-  </div>
 </div>
