--- a/frontend/src/app/components/payroll/pay-salary-sheet/pay-salary-sheet.component.html
+++ b/frontend/src/app/components/payroll/pay-salary-sheet/pay-salary-sheet.component.html
@@ -36,7 +36,8 @@
             <div class="form-group col-md-6">
                 <label>Year</label>
                 <input bsDatepicker
-                       [bsConfig]="{ dateInputFormat: 'YYYY-MM' }"  name="resignDate" class="form-control" id="year" (onShown)="onOpenCalendar($event)">
+                       [bsConfig]="{ dateInputFormat: 'YYYY-MM' }" name="resignDate" class="form-control" id="year"
+                       (onShown)="onOpenCalendar($event)">
             </div>
 
 
@@ -45,53 +46,55 @@
             </div>
         </div>
 
+        <ng-template [ngIf]="showSalary">
             <hr>
-        <div class="row" style="padding: 20px;">
-            <table class="table table-bordered table-striped">
-                <thead>
-                <th style="text-align: center">Head</th>
-                <th style="text-align: center">Amount</th>
-                <th style="text-align: center">Action</th>
-                </thead>
-                <tbody>
-                <tr *ngFor="let data of salarySheetTable">
-                    <td>{{data.allowDeducTitle}}</td>
-                    <td>{{data.AMOUNT}}</td>
-                    <td>
-                        <button class="btn btn-info" (click)="editSubSheet(data)">edit</button>
-                    </td>
+            <div class="row" style="padding: 20px;">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                    <th style="text-align: center">Head</th>
+                    <th style="text-align: center">Amount</th>
+                    <th style="text-align: center">Action</th>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let data of salarySheetTable">
+                        <td>{{data.allowDeducTitle}}</td>
+                        <td>{{data.AMOUNT}}</td>
+                        <td>
+                            <button class="btn btn-info" (click)="editSubSheet(data)">edit</button>
+                        </td>
 
-                    <!--<td>  <button class="btn btn-info" (click)="edit(shift.shiftId,content)"> Edit</button></td>-->
+                        <!--<td>  <button class="btn btn-info" (click)="edit(shift.shiftId,content)"> Edit</button></td>-->
 
-                </tr>
+                    </tr>
 
-                </tbody>
+                    </tbody>
 
-            </table>
-            <hr>
+                </table>
+                <hr>
 
-            <div class="form-group col-md-6">
-                <label>Payhead</label>
-                <input class="form-control" placeholder="head" type="text" [(ngModel)]="subsheetModel.payhead" readonly>
+                <div class="form-group col-md-6">
+                    <label>Payhead</label>
+                    <input class="form-control" placeholder="head" type="text" [(ngModel)]="subsheetModel.payhead"
+                           readonly>
+                </div>
+
+                <div class="form-group col-md-6">
+                    <label>Amount</label>
+                    <input class="form-control" placeholder="name" type="text" [(ngModel)]="subsheetModel.amount">
+                </div>
+                <div class="form-group col-md-12">
+                    <label>Description</label>
+                    <input class="form-control" placeholder="" type="text" [(ngModel)]="subsheetModel.description">
+                </div>
+
+
+                <div class="form-group col-md-12">
+                    <button class="btn btn-success" (click)="updateSubSheet()">edit</button>
+                </div>
+
+
             </div>
-
-            <div class="form-group col-md-6">
-                <label>Amount</label>
-                <input class="form-control" placeholder="name" type="text" [(ngModel)]="subsheetModel.amount">
-            </div>
-            <div class="form-group col-md-12">
-                <label>Description</label>
-                <input class="form-control" placeholder="" type="text" [(ngModel)]="subsheetModel.description">
-            </div>
-
-
-            <div class="form-group col-md-12">
-                <button class="btn btn-success" (click)="updateSubSheet()">edit</button>
-            </div>
-
-
-        </div>
-
+        </ng-template>
 
     </div>
 
