--- a/frontend/src/app/components/user/salary-info/salary-info.component.html
+++ b/frontend/src/app/components/user/salary-info/salary-info.component.html
@@ -32,7 +32,7 @@
 <br>
 <div class="card">
   <div class="card-header">
-    Salary Salary Sheet
+    Salary Salary Setup
   </div>
 
   <div class="card-body">
@@ -58,9 +58,6 @@
                 <button class="btn btn-sm btn-info" (click)="editSheet(data)">Edit</button>
                 <button class="btn btn-sm btn-danger" (click)="deleteSheet(data)">Delete</button>
               </td>
-
-
-
             </tr>
             </tbody>
           </table>
