--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -228,6 +228,7 @@
             <a routerLink="#" ><i class="fa fa-chart"></i>Payroll</a>
             <ul class="submenu">
               <li class="">
+                <a routerLink="payroll/salary/generate">Generate Salary</a>
                 <a routerLink="payroll/pay-grade">Pay Grade</a>
                 <a routerLink="payroll/payhead">Pay Head</a>
                 <a routerLink="payroll/salary-sheet">Salary Sheet</a>
