--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -12,23 +12,10 @@
       </div>
 
       <div class="menu-extras topbar-custom">
-        <!-- Search input -->
-        <div class="search-wrap" id="search-wrap">
-          <div class="search-bar">
-            <input class="search-input" type="search" placeholder="Search" />
-            <a href="#" class="close-search toggle-search" data-target="#search-wrap">
-              <i class="mdi mdi-close-circle"></i>
-            </a>
-          </div>
-        </div>
+
 
         <ul class="list-inline float-right mb-0">
-          <!-- Search -->
-          <li class="list-inline-item dropdown notification-list">
-            <a class="nav-link waves-effect toggle-search" href="#"  data-target="#search-wrap">
-              <i class="mdi mdi-magnify noti-icon"></i>
-            </a>
-          </li>
+
           <!-- Messages-->
           <li class="list-inline-item dropdown notification-list">
             <a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown" href="#" role="button"
@@ -43,24 +30,24 @@
               </div>
 
               <!-- item-->
-              <a href="javascript:void(0);" class="dropdown-item notify-item">
-                <div class="notify-icon"><img src="assets/images/users/avatar-2.jpg" alt="user-img" class="img-fluid rounded-circle" /> </div>
-                <p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy text of the printing and typesetting industry.</small></p>
-              </a>
+<!--              <a href="javascript:void(0);" class="dropdown-item notify-item">-->
+<!--                <div class="notify-icon"><img src="assets/images/users/avatar-2.jpg" alt="user-img" class="img-fluid rounded-circle" /> </div>-->
+<!--                <p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy text of the printing and typesetting industry.</small></p>-->
+<!--              </a>-->
 
-              <!-- item-->
-              <a href="javascript:void(0);" class="dropdown-item notify-item">
-                <div class="notify-icon"><img src="assets/images/users/avatar-3.jpg" alt="user-img" class="img-fluid rounded-circle" /> </div>
-                <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You have 87 unread messages</small></p>
-              </a>
+<!--              &lt;!&ndash; item&ndash;&gt;-->
+<!--              <a href="javascript:void(0);" class="dropdown-item notify-item">-->
+<!--                <div class="notify-icon"><img src="assets/images/users/avatar-3.jpg" alt="user-img" class="img-fluid rounded-circle" /> </div>-->
+<!--                <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You have 87 unread messages</small></p>-->
+<!--              </a>-->
 
-              <!-- item-->
-              <a href="javascript:void(0);" class="dropdown-item notify-item">
-                <div class="notify-icon"><img src="assets/images/users/avatar-4.jpg" alt="user-img" class="img-fluid rounded-circle" /> </div>
-                <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a long established fact that a reader will</small></p>
-              </a>
+<!--              &lt;!&ndash; item&ndash;&gt;-->
+<!--              <a href="javascript:void(0);" class="dropdown-item notify-item">-->
+<!--                <div class="notify-icon"><img src="assets/images/users/avatar-4.jpg" alt="user-img" class="img-fluid rounded-circle" /> </div>-->
+<!--                <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a long established fact that a reader will</small></p>-->
+<!--              </a>-->
 
-              <!-- All-->
+<!--              &lt;!&ndash; All&ndash;&gt;-->
               <a href="javascript:void(0);" class="dropdown-item notify-item">
                 View All
               </a>
@@ -80,23 +67,23 @@
                 <h5>Notification (3)</h5>
               </div>
 
-              <!-- item-->
-              <a href="javascript:void(0);" class="dropdown-item notify-item active">
-                <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>
-                <p class="notify-details"><b>Your order is placed</b><small class="text-muted">Dummy text of the printing and typesetting industry.</small></p>
-              </a>
+<!--              &lt;!&ndash; item&ndash;&gt;-->
+<!--              <a href="javascript:void(0);" class="dropdown-item notify-item active">-->
+<!--                <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>-->
+<!--                <p class="notify-details"><b>Your order is placed</b><small class="text-muted">Dummy text of the printing and typesetting industry.</small></p>-->
+<!--              </a>-->
 
-              <!-- item-->
-              <a href="javascript:void(0);" class="dropdown-item notify-item">
-                <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>
-                <p class="notify-details"><b>New Message received</b><small class="text-muted">You have 87 unread messages</small></p>
-              </a>
+<!--              &lt;!&ndash; item&ndash;&gt;-->
+<!--              <a href="javascript:void(0);" class="dropdown-item notify-item">-->
+<!--                <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>-->
+<!--                <p class="notify-details"><b>New Message received</b><small class="text-muted">You have 87 unread messages</small></p>-->
+<!--              </a>-->
 
-              <!-- item-->
-              <a href="javascript:void(0);" class="dropdown-item notify-item">
-                <div class="notify-icon bg-info"><i class="mdi mdi-martini"></i></div>
-                <p class="notify-details"><b>Your item is shipped</b><small class="text-muted">It is a long established fact that a reader will</small></p>
-              </a>
+<!--              &lt;!&ndash; item&ndash;&gt;-->
+<!--              <a href="javascript:void(0);" class="dropdown-item notify-item">-->
+<!--                <div class="notify-icon bg-info"><i class="mdi mdi-martini"></i></div>-->
+<!--                <p class="notify-details"><b>Your item is shipped</b><small class="text-muted">It is a long established fact that a reader will</small></p>-->
+<!--              </a>-->
 
               <!-- All-->
               <a href="javascript:void(0);" class="dropdown-item notify-item">
@@ -113,9 +100,9 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
               <a class="dropdown-item" routerLink="profile"><i class="dripicons-user text-muted"></i> Profile</a>
-              <a class="dropdown-item" href="#"><i class="dripicons-wallet text-muted"></i> My Wallet</a>
-              <a class="dropdown-item" href="#"><span class="badge badge-success pull-right m-t-5">5</span><i class="dripicons-gear text-muted"></i> Settings</a>
-              <a class="dropdown-item" href="#" (click)="whoAmI($event)"><i class="dripicons-lock text-muted"></i> Who Am I</a>
+<!--              <a class="dropdown-item" href="#"><i class="dripicons-wallet text-muted"></i> My Wallet</a>-->
+<!--              <a class="dropdown-item" href="#"><span class="badge badge-success pull-right m-t-5">5</span><i class="dripicons-gear text-muted"></i> Settings</a>-->
+<!--              <a class="dropdown-item" href="#" (click)="whoAmI($event)"><i class="dripicons-lock text-muted"></i> Who Am I</a>-->
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#" (click)="logout($event)"><i class="dripicons-exit text-muted"></i> Logout</a>
             </div>
@@ -231,7 +218,7 @@
                 <a routerLink="payroll/salary/generate">Generate Salary</a>
                 <a routerLink="payroll/pay-grade">Pay Grade</a>
                 <a routerLink="payroll/payhead">Pay Head</a>
-                <a routerLink="payroll/salary-sheet">Salary Sheet</a>
+                <a routerLink="payroll/salary-sheet">Edit Salary Sheet</a>
                 <a routerLink="payroll/pay-advance">Advance Payment</a>
                 <a routerLink="payroll/salary/setup">Salary Setup</a>
 
