--- a/frontend/src/app/components/payroll/generate-salary/generate-salary.component.html
+++ b/frontend/src/app/components/payroll/generate-salary/generate-salary.component.html
@@ -37,7 +37,7 @@
                     <td>{{data.salaryMonth}}</td>
                     <td>{{data.fkPreparedBy}}</td>
                     <td>{{data.preparedDate}}</td>
-                    <td>  <button class="btn btn-info btn-sm"> Edit</button></td>
+                    <td>  <button class="btn btn-info btn-sm" (click)="downloadSalarySheet(data)"> Download</button></td>
 
                 </tr>
 
