--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<ng-template [ngIf]="loadPage">
+
 
 <app-navbar *ngIf="isLogIn()"></app-navbar>
 
@@ -13,6 +15,6 @@
 
   <router-outlet></router-outlet>
 </div>
-
+</ng-template>
 
 
