--- a/frontend/src/app/components/configuration/show-leave/show-leave.component.html
+++ b/frontend/src/app/components/configuration/show-leave/show-leave.component.html
@@ -163,6 +163,8 @@
         <th>Start</th>
         <th>End</th>
         <th>Days</th>
+        <th>Category</th>
+        <th>Remark</th>
         <th>Reject Cause</th>
         <th>Status</th>
         <th>Action</th>
