--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -157,6 +157,7 @@
                   <li><a routerLink="leave/apply">Apply Leave</a></li>
                   <li><a routerLink="configuration/leave" *ngxPermissionsOnly="['admin']">Create Leave</a></li>
                   <li><a routerLink="configuration/leave/show" *ngxPermissionsOnly="['admin']">Show Leave</a></li>
+                  <li><a routerLink="leave/summery" *ngxPermissionsOnly="['admin']">Leave Summery</a></li>
                 </ul>
               </li>
 
